@@ -5,22 +5,27 @@ import javaposse.jobdsl.dsl.helpers.*
 class DockerisedService {
 
     String name
-    String gitRepoUrl
+    String gitCloneUrl
     String dockerRepoUrl
+    String sbtSubDir
     Boolean requiresMysql
 
-    public DockerisedService(name, gitRepoUrl, dockerRepoUrl, requiresMysql) {
+    public DockerisedService(name, gitCloneUrl, dockerRepoUrl, requiresMysql, sbtSubDir = '.') {
         this.name = name
-        this.gitRepoUrl = gitRepoUrl
-        this.requiresMysql = requiresMysql
+        this.gitCloneUrl = gitCloneUrl
         this.dockerRepoUrl = dockerRepoUrl
+        this.requiresMysql = requiresMysql
+        this.sbtSubDir = sbtSubDir
     }
 }
 
 DockerisedService dockerisedService = new DockerisedService(
-    <%= props.projectName %>, <%= props.gitRepoUrl %>,
-    <%= props.dockerRepoUrl %>, <%= props.testsRequireMysql %>
+    '<%= props.appName %>', '<%= props.gitCloneUrl %>',
+    '<%= props.dockerRepoUrl %>', <%= props.testsRequireMysql %>
 )
+
+createJob(dockerisedService, false)
+createJob(dockerisedService, true)
 
 /**
  *
@@ -39,16 +44,16 @@ def createJob(service, isReleaseJob) {
         label('build-nodes')
 
         parameters {
-            stringParam('GIT_BRANCH', 'master', 'Can be SHA, Tag or Branch')
-            stringParam('DOCKER_IMAGE_TAG', 'latest', 'The docker image will be tagged using this tag')
+            stringParam('GIT_BRANCH', 'master', 'Must be a git branch or tag')
+            stringParam('TAG_VERSION', 'latest', 'The docker image will be tagged using this tag')
         }
 
         scm {
             git {
                 remote {
-                    url(service.gitRepoUrl)
+                    url(service.gitCloneUrl)
                 }
-                branch("$\GIT_BRANCH")
+                branch("\$GIT_BRANCH")
             }
         }
 
@@ -59,13 +64,15 @@ def createJob(service, isReleaseJob) {
         }
 
         steps {
+            gitFreshCheckoutBranch()
             if (service.requiresMysql) startMysqlStep()
 
             if (isReleaseJob) {
-                sbtCommandStep('release')
+                sbtCommandStep('release-with-defaults', service.sbtSubDir, ['release_version':\${TAG_VERSION}])
+                sbtCommandStep('stage', service.sbtSubdir)
                 dockerBuildAndPushStep(service)
             } else {
-                sbtCommandStep('test')
+                sbtCommandStep('test', sbtSubDir)
             }
         }
 
@@ -73,6 +80,20 @@ def createJob(service, isReleaseJob) {
             publishTestReport()
         }
     }
+}
+
+// For the release plugin to work, we need to checkout the branch
+// not a detached head that the git plugin does by default.
+// This should be included in release
+StepContext.metaClass.gitFreshCheckoutBranch = {
+  shell("""#!/bin/bash
+    |set -e
+    |
+    |# We need to do this again so that the release process can push changes to git repo
+    |git fetch
+    |git checkout \${GIT_BRANCH}
+    |""".stripMargin()
+  )
 }
 
 StepContext.metaClass.startMysql = {
@@ -87,23 +108,28 @@ StepContext.metaClass.startMysql = {
        )
 }
 
-StepContext.metaClass.sbtCommandStep = { command ->
-    shell("""#!/bin/bash
-        |set -e
-        |
-        |sbt $command
-        |
-        |""".stripMargin()
-    )
+StepContext.metaClass.sbtCommandStep = { command, subdir, options = [:] ->
+    options.put('sbt.log.noformat', true)
+    sbtOptions = options.colect { key, value ->
+        '-D' + key + '=' + value
+    }.join(' ')
+    sbt(
+      'current',
+      sbtCommand,
+      sbtOptions,
+      '-Xmx1536M -Xss1M -XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=384M',
+      subdir,
+      null
+  )
 }
 
 StepContext.metaClass.dockerBuildAndPushStep = { service ->
     shell("""#!/bin/bash
         |set -e
         |
-        |DOCKER_PUSH_PATH=${service.dockerRepoUrl}${service.name}:\$DOCKER_IMAGE_TAG
+        |DOCKER_PUSH_PATH=${service.dockerRepoUrl}${service.name}:\$TAG_VERSION
         |
-        |./docker-build.sh \$DOCKER_IMAGE_TAG
+        |./docker-build.sh \$TAG_VERSION
         |
         |docker push $DOCKER_PUSH_PATH
         |
@@ -112,4 +138,63 @@ StepContext.metaClass.dockerBuildAndPushStep = { service ->
     )
 }
 
+// Seed job that runs this file
+job("<%=props.appName %>-seed") {
+  logRotator(10,10)
+  label('master')
+  parameters {
+    stringParam('GIT_COMMIT', 'master', 'Can be a git commit, tag or branch')
+  }
+  scm {
+    git {
+      remote {
+        url("<%= props.gitCloneUrl %>")
+      }
+      branch('\$GIT_COMMIT')
+    }
+  }
+  steps {
+    dsl {
+      external('jenkins-seed.groovy')
+      removeAction('DISABLE')
+    }
+  }
+}
 
+// VIEWS
+listView(<%= props.appName %>) {
+    description('Release and CI jobs for <%= props.appName %>')
+    filterBuildQueue()
+    filterExecutors()
+    jobs {
+        regex('<%= props.appName %>*')
+    }
+    columns {
+        status()
+        weather()
+        name()
+        lastSuccess()
+        lastFailure()
+        lastDuration()
+        buildButton()
+    }
+}
+
+// VIEWS
+listView('seed-jobs') {
+    description('Seed jobs')
+    filterBuildQueue()
+    filterExecutors()
+    jobs {
+        regex('*seed*')
+    }
+    columns {
+        status()
+        weather()
+        name()
+        lastSuccess()
+        lastFailure()
+        lastDuration()
+        buildButton()
+    }
+}
